# reelsynth

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  maturin.toml  pyproject.toml
.cursor/: hooks.json  mcp.json.example
.cursor/hooks/: require-clean-compile.js  verify-compile-stamp.js
.cursor/skills/audit-reelsynth-ui/: SKILL.md  reference.md
.cursor/skills/reelsynth-workflow/: SKILL.md
.github/workflows/: release.yml
app/: Cargo.toml
app/src/: app.rs  app_settings.rs  audio_commands.rs  audio_devices.rs  audio_host.rs  keyboard_layout.rs  main.rs  midi_input.rs
brand/: BRAND.md  DESIGN.md  MAJICO.md
brand/artifacts/: ITER_TARGET_NOTE.md  artifact_reduction_history.json  denoise_opt_bench_100k.json  denoise_opt_bench_100k_fit.json  denoise_opt_fitted.json  denoise_opt_gate.json  denoise_opt_meta_1500.json  denoise_opt_meta_cpu_overnight_snapshot.json  denoise_opt_meta_lit_combo_500.json  denoise_opt_meta_search.json  harvest_literature.py  harvest_meta_lit.py  harvest_rl_meta_nas.py  literature_audio_denoise_arch.json  literature_core_citations.json  literature_klaut_research.json  literature_meta_audio.json  literature_rl_ga_nas_hybrid.json  literature_rl_meta_nas.json  overnight_1m_done_watcher.ps1  overnight_gpu_rl_arch_latest.json  peak_vram_search_probe.json  render_artifact_reduction.py  render_benchmark_matrix.py  render_paper_figures.py  sota_matrix.json  sound_bench_tiles_20.json  summarize_bench.py
brand/artifacts/canonical_eval_dataset/: dataset_metrics.json  fig_intro_sine_problem.json  holdout_batch.pt  method_scores.json  method_scores_table.md
brand/artifacts/classical_vs_ai_bench/: classical_vs_ai.json
brand/artifacts/meta_approach_compare/: REPRO.md
brand/artifacts/meta_approach_compare/hear_samples/: README.md  manifest.json
brand/artifacts/models/gpu-rl-arch-20260718T101039Z/: run_meta.json
brand/artifacts/models/gpu-rl-arch-20260718T101110Z/: run_meta.json
brand/artifacts/models/smoke-gpu/: run_meta.json  (+1 more)
brand/design/: tokens.css
brand/mockups/: mockups.css
brand/mockups/audits/: IMPLEMENTATION_LOG.md
data/wavetables/: bright_lead.reelwt  formant.reelwt  metallic.reelwt  sine.reelwt  square_morph.reelwt
docs/: AGENT_API.md  FORMAT.md  FREE_STACK.md  GETTING_STARTED.md  README.md  REELDEMO_INTEGRATION.md  SDK.md  UI.md  WHITEPAPER_DENOISE_OPT.md  WORKFLOW.md
docs/papers/denoise_opt/: README.md  SIGNAL_HEALING_APPLICATIONS_LIT.md  SIGNAL_HEALING_DATASETS.md  main.tex
docs/superpowers/plans/: 2026-07-15-wt-stack-editor.md  2026-07-16-piano-roll-clip-editor.md
docs/superpowers/specs/: 2026-07-16-piano-roll-clip-editor-design.md  2026-07-18-crackle-sources.md  2026-07-18-denoise-opt-design.md  2026-07-18-overtone-suppression-design.md
mcp/: Cargo.toml
mcp/src/: main.rs
plugin/: CMakeLists.txt  Cargo.toml  README.md
plugin/src/: clap_entry.rs  editor.rs  lib.rs
schemas/: reelsynth-preset-v1.json
scripts/: baseline_names.py  bench_canonical_eval_dataset.py  bench_classical_vs_ai.py  bench_cliff_strata.py  bench_inference_diverse.py  bench_inference_same_score.py  bench_jump_control.py  bench_meta_approaches_5k.py  bench_poly_seam_baseline.py  bench_rust_sound_bench_tiles.py  bench_sota_matrix.py  bench_va_seam_blep.py  bundle-docs-images.sh  denoise_arch_blocks.py  denoise_meta_evo.py  export_meta_hear_samples.py  finish_overnight_1m_to_paper.py  git-with-token.ps1  harvest_audio_denoise_arch.py  harvest_rl_ga_nas_hybrid.py  launch_meta_approach_compare.py  measure_peak_vram.py  meta_approach_dashboard.py  meta_approach_status.ps1  meta_approach_status.py  metrics_snr_sdr.py  overnight_1m_durable_finisher.ps1  overnight_gpu_babysit_1m.ps1  overnight_gpu_rl_arch.py  overnight_gpu_watchdog.ps1  plot_dataset_statistics.py  plot_overnight_history.py  plot_sota_matrix.py  pull.ps1  push.ps1  real_wt_wrap_protocol.py  release.sh  run_isolated_ablations.py  start_overnight_gpu_detached.ps1  test_overnight_gpu_rl_nan.py  (+2 more)
src/: artifact_reduce.rs  crackle_diag.rs  crackle_eam.rs  denoise_meta.rs  denoise_meta_overnight.rs  denoise_opt.rs  fx.rs  lfo.rs  lib.rs  modulation.rs  oversample.rs  patch.rs  preview.rs  seam.rs  signal_library.rs  sound_bench.rs  voice.rs  wavetable.rs  wt_quant.rs
src/analysis/: harmonics.rs  mod.rs
src/engine/: midi.rs  mod.rs  mpe.rs  params.rs  voice_pool.rs  voice_rt.rs
src/export/: midi.rs  mod.rs  reelpack.rs
src/ffi/: mod.rs
src/fx/: processors.rs
src/import/: mod.rs  serum.rs  vital.rs  wav.rs
src/osc/: mod.rs  stack.rs  va.rs
src/overtone/: chain.rs  harshness.rs  mod.rs  processors.rs  tests.rs  types.rs
src/patch/: factory.rs  mod.rs  schema.rs  tests.rs
src/performance/: arp.rs  mod.rs  settings.rs
src/scope/: analytical.rs  mod.rs
src/sequence/: automation.rs  clock.rs  mod.rs  quantize.rs  recorder.rs  runtime.rs  scheduler.rs  schema.rs  tests.rs  transport.rs
src/voice/: kernel.rs  mod.rs  process.rs  process_tests.rs
tests/: engine_rt.rs  qa_matrix.rs
tests/qa/: sequence.rs
ui/: Cargo.toml
ui-theme/: Cargo.toml
ui-theme/examples/: smoke.rs
ui-theme/src/: lib.rs
ui/src/: agent_api.rs  ambient.rs  audit_registry.rs  center_layout.rs  filter_rack.rs  fx_rack.rs  layout.rs  layout_audit.rs  lib.rs  mod_matrix.rs  osc.rs  osc_column.rs  oscillator_ui.rs  overtone_rack.rs  quant_interp.rs  region.rs  s1.rs  scope_strip.rs  state.rs  state_sync.rs
ui/src/compose/: arrangement.rs  command_history.rs  mod.rs  piano_roll.rs  scene_grid.rs  track_list.rs  transport_bar.rs
ui/src/performance/: arp_panel.rs  chord_grid.rs  header.rs  mod.rs
ui/src/shell/: center.rs  footer.rs  header.rs  mod.rs  rail.rs
ui/src/widgets/: adsr.rs  button.rs  knob.rs  mod.rs  panel.rs  piano.rs  tabs.rs
ui/src/wt/: curve_editor.rs  gpu_waveform.rs  mod.rs  mod_preview.rs  morph.rs  quant_handles.rs  residual.rs  shape_editor.rs  slots.rs  strip.rs  toolbar.rs  view_2d.rs  view_3d.rs  view_3d_stack.rs  view_result.rs  view_selected.rs  view_zoom.rs  waveform.rs
ui/tests/: kittest.rs
ui/tests/common/: audit_harness.rs
(+129 files in other folders)
