[workspace]
members = [".", "ui-theme", "ui", "app", "plugin", "mcp"]
resolver = "2"

[package]
name = "reelsynth"
version = "0.1.0"
edition = "2021"
description = "Open-source wavetable synthesizer engine for Reeldemo"
license = "MIT"
readme = "README.md"

[[bin]]
name = "gen_factory"
path = "src/bin/gen_factory.rs"
required-features = []

[[bin]]
name = "reelsynth-export"
path = "src/bin/export.rs"
required-features = []

[[bin]]
name = "gen_qa_goldens"
path = "src/bin/gen_qa_goldens.rs"
required-features = []

[[bin]]
name = "bench_denoise_meta"
path = "src/bin/bench_denoise_meta.rs"
required-features = []

[[bin]]
name = "bench_denoise_opt"
path = "src/bin/bench_denoise_opt.rs"
required-features = []

[[bin]]
name = "export_sound_bench_tiles"
path = "src/bin/export_sound_bench_tiles.rs"
required-features = []

[lib]
name = "reelsynth"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustfft = "6.2"

[features]
default = []
realtime = []
python = ["dep:pyo3", "dep:numpy"]

[dev-dependencies]
approx = "0.5"
