[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "reelsynth"
version = "0.1.0"
description = "Open-source wavetable synthesizer engine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.maturin]
features = ["python"]
module-name = "reelsynth"
