[package]
name = "reelsynth-app"
version = "0.1.0"
edition = "2021"
description = "ReelSynth standalone playable app"
license = "MIT"

[[bin]]
name = "reelsynth-app"
path = "src/main.rs"

[dependencies]
reelsynth = { path = ".." }
reelsynth-ui = { path = "../ui" }
reelsynth-ui-theme = { path = "../ui-theme" }
eframe = { version = "0.30", default-features = true, features = ["wgpu"] }
egui = "0.30"
cpal = "0.15"
crossbeam-channel = "0.5"
rfd = "0.15"
midir = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
