[package]
name = "reelsynth-mcp"
version = "0.2.0"
edition = "2021"
description = "MCP stdio server for ReelSynth Design agent automation"
license = "MIT"
publish = false

[[bin]]
name = "reelsynth-mcp"
path = "src/main.rs"

[dependencies]
reelsynth-ui = { path = "../ui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
