[package]
name = "reelsynth-ui-theme"
version = "0.2.0"
edition = "2021"
description = "Majico design tokens → egui theme for ReelSynth"
license = "MIT"

[dependencies]
egui = "0.30"

[dev-dependencies]
eframe = { version = "0.30", default-features = true }

[[example]]
name = "smoke"
path = "examples/smoke.rs"
