[package]
name = "reelsynth-ui"
version = "0.2.0"
edition = "2021"
description = "ReelSynth egui widgets and S1 layout"
license = "MIT"

[lib]
name = "reelsynth_ui"
path = "src/lib.rs"

[[bin]]
name = "reelsynth-ui-proto"
path = "src/bin/proto.rs"

[dependencies]
reelsynth = { path = ".." }
reelsynth-ui-theme = { path = "../ui-theme" }
egui = "0.30"
eframe = { version = "0.30", default-features = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
egui_kittest = "0.30"
